[gd_scene load_steps=8 format=2]

[ext_resource path="res://scenes/entity/viopa/viopa.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/entity/btree/tasks/composite/movement_generic_viopa.gd" type="Script" id=2]
[ext_resource path="res://assets/audio/effects/kenney_interfacesounds/audio/confirmation_004.ogg" type="AudioStream" id=3]
[ext_resource path="res://scenes/entity/viopa/npc/viopa_npc.gd" type="Script" id=4]
[ext_resource path="res://scenes/entity/btree/tasks/composite/movement_selector_viopa.gd" type="Script" id=5]

[sub_resource type="SphereShape" id=2]
radius = 12.0

[sub_resource type="AudioStreamRandomPitch" id=1]
audio_stream = ExtResource( 3 )
random_pitch = 1.04

[node name="ViopaNPC" instance=ExtResource( 1 )]
script = ExtResource( 4 )

[node name="MovementSelectorViopa" type="Node" parent="." index="0"]
script = ExtResource( 5 )

[node name="MovementGenericViopa" type="Node" parent="MovementSelectorViopa" index="0"]
script = ExtResource( 2 )

[node name="Label3D" type="Label3D" parent="." index="1"]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 3.5, 0 )
pixel_size = 0.05
text = "Chosen Direction"

[node name="SearchArea" type="Area" parent="." index="2"]

[node name="CollisionShape" type="CollisionShape" parent="SearchArea" index="0"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0 )
shape = SubResource( 2 )

[node name="Casts" type="Spatial" parent="." index="3"]

[node name="#0" type="RayCast" parent="Casts" index="0"]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 2.6, 0 )
enabled = true
cast_to = Vector3( 0, 0, 8 )

[node name="#1" type="RayCast" parent="Casts" index="1"]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 2.6, 0 )
enabled = true
cast_to = Vector3( 5, 0, 5 )

[node name="#2" type="RayCast" parent="Casts" index="2"]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 2.6, 0 )
enabled = true
cast_to = Vector3( 8, 0, 0 )

[node name="#3" type="RayCast" parent="Casts" index="3"]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 2.6, 0 )
enabled = true
cast_to = Vector3( 5, 0, -5 )

[node name="#4" type="RayCast" parent="Casts" index="4"]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 2.6, 0 )
enabled = true
cast_to = Vector3( 0, 0, -8 )

[node name="#5" type="RayCast" parent="Casts" index="5"]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 2.6, 0 )
enabled = true
cast_to = Vector3( -5, 0, -5 )

[node name="#6" type="RayCast" parent="Casts" index="6"]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 2.6, 0 )
enabled = true
cast_to = Vector3( -8, 0, 0 )

[node name="#7" type="RayCast" parent="Casts" index="7"]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 2.6, 0 )
enabled = true
cast_to = Vector3( -5, 0, 5 )

[node name="Drop" type="RayCast" parent="Casts" index="8"]

[node name="VisionCast" parent="." index="4"]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 2.57897, -0.329422 )
enabled = true
cast_to = Vector3( 0, 0, 8 )

[node name="DropCast" parent="." index="5"]
enabled = true

[node name="Sounds" parent="." index="10"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.53649, 0 )
stream = SubResource( 1 )
